add cors middleware & improve route & document
